--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@
 		
 	Website: 		http://freehtml5.co/
 	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
+	Twitter: 		http://twitter.com/equinox
+	Facebook: 		https://www.facebook.com/equinox
 
 	//////////////////////////////////////////////////////
 	 -->
@@ -63,16 +63,16 @@
 	</head>
 	<body>
 		
-	<div class="fh5co-loader"></div>
+	<div class="equinox-loader"></div>
 	
 	<div id="page">
-	<nav class="fh5co-nav" role="navigation">
+	<nav class="equinox-nav" role="navigation">
 		<div class="top">
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 text-right">
 						<a class="name-style" href="https://wa.me/+919754530845" target="_blank">Whatsapp Now: +91 975 453 0845</a>
-						<ul class="fh5co-social">
+						<ul class="equinox-social">
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
 							<li><a href="#"><i class="icon-dribbble"></i></a></li>
 							<li><a href="#"><i class="icon-github"></i></a></li>
@@ -85,7 +85,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-1">
-						<div id="fh5co-logo"><a href="index.html">Equinox<span>.</span></a></div>
+						<div id="equinox-logo"><a href="index.html">Equinox<span>.</span></a></div>
 					</div>
 					<div class="col-xs-11 text-right menu-1">
 						<ul>
@@ -109,7 +109,7 @@
 		</div>
 	</nav>
 
-	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/img_bg_2.jpg);" data-stellar-background-ratio="0.5">
+	<header id="equinox-header" class="equinox-cover equinox-cover-sm" role="banner" style="background-image:url(images/img_bg_3.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -127,11 +127,11 @@
 
 	
 	
-	<div id="fh5co-started" style="background-image:url(images/img_bg_2.jpg);">
+	<div id="equinox-started" style="background-image:url(images/img_bg_2.jpg);">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+				<div class="col-md-8 col-md-offset-2 text-center equinox-heading">
 					<h2>Lets Get Started</h2>
 					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
 				</div>
@@ -144,16 +144,16 @@
 		</div>
 	</div>
 
-	<footer id="fh5co-footer" role="contentinfo">
+	<footer id="equinox-footer" role="contentinfo">
 		<div class="container">
 			<div class="row row-pb-md">
-				<div class="col-md-3 fh5co-widget">
+				<div class="col-md-3 equinox-widget">
 					<h4>About Learning</h4>
 					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
 				</div>
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
 					<h4>Learning</h4>
-					<ul class="fh5co-footer-links">
+					<ul class="equinox-footer-links">
 						<li><a href="#">Course</a></li>
 						<li><a href="#">Blog</a></li>
 						<li><a href="#">Contact</a></li>
@@ -164,7 +164,7 @@
 
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
 					<h4>Learn &amp; Grow</h4>
-					<ul class="fh5co-footer-links">
+					<ul class="equinox-footer-links">
 						<li><a href="#">Blog</a></li>
 						<li><a href="#">Privacy</a></li>
 						<li><a href="#">Testimonials</a></li>
@@ -175,7 +175,7 @@
 
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
 					<h4>Engage us</h4>
-					<ul class="fh5co-footer-links">
+					<ul class="equinox-footer-links">
 						<li><a href="#">Marketing</a></li>
 						<li><a href="#">Visual Assistant</a></li>
 						<li><a href="#">System Analysis</a></li>
@@ -185,7 +185,7 @@
 
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
 					<h4>Legal</h4>
-					<ul class="fh5co-footer-links">
+					<ul class="equinox-footer-links">
 						<li><a href="#">Find Designers</a></li>
 						<li><a href="#">Find Developers</a></li>
 						<li><a href="#">Teams</a></li>
@@ -202,7 +202,7 @@
 						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
 					</p>
 					<p>
-						<ul class="fh5co-social-icons">
+						<ul class="equinox-social-icons">
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
 							<li><a href="#"><i class="icon-facebook"></i></a></li>
 							<li><a href="#"><i class="icon-linkedin"></i></a></li>
