--- a/courses.html
+++ b/courses.html
@@ -17,8 +17,8 @@
 		
 	Website: 		http://freehtml5.co/
 	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
+	Twitter: 		http://twitter.com/equinox
+	Facebook: 		https://www.facebook.com/equinox
 
 	//////////////////////////////////////////////////////
 	 -->
@@ -63,16 +63,16 @@
 	</head>
 	<body>
 		
-	<div class="fh5co-loader"></div>
+	<div class="equinox-loader"></div>
 	
 	<div id="page">
-	<nav class="fh5co-nav" role="navigation">
+	<nav class="equinox-nav" role="navigation">
 		<div class="top">
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 text-right">
 						<a class="name-style" href="https://wa.me/+919754530845" target="_blank">Whatsapp Now: +91 975 453 0845</a>
-						<ul class="fh5co-social">
+						<ul class="equinox-social">
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
 							<li><a href="#"><i class="icon-instagram"></i></a></li>
 							<li><a href="#"><i class="icon-github"></i></a></li>
@@ -85,7 +85,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-1">
-						<div id="fh5co-logo"><a href="index.html">Equinox<span>.</span></a></div>
+						<div id="equinox-logo"><a href="index.html">Equinox<span>.</span></a></div>
 					</div>
 					<div class="col-xs-11 text-right menu-1">
 						<ul>
@@ -109,7 +109,7 @@
 		</div>
 	</nav>
 
-	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/img_bg_2.jpg);" data-stellar-background-ratio="0.5">
+	<header id="equinox-header" class="equinox-cover equinox-cover-sm" role="banner" style="background-image:url(images/img_bg_2.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -125,7 +125,7 @@
 		</div>
 	</header>
 
-	<div id="fh5co-pricing">
+	<div id="equinox-pricing">
 		<div class="container">
 			<div class="row">
 				<div class="pricing">
@@ -185,16 +185,16 @@
 		</div>
 	</div>
 
-	<div id="fh5co-explore" class="fh5co-bg-section">
+	<div id="equinox-explore" class="equinox-bg-section">
 		<div class="container">
 			<div class="row animate-box">
-				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
+				<div class="col-md-6 col-md-offset-3 text-center equinox-heading">
 					<h2>Take A Course</h2>
 					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 				</div>
 			</div>
 		</div>		
-		<div class="fh5co-explore fh5co-explore1">
+		<div class="equinox-explore equinox-explore1">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-push-5 animate-box">
@@ -216,7 +216,7 @@
 			</div>
 		</div>
 
-		<div class="fh5co-explore">
+		<div class="equinox-explore">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-pull-1 animate-box">
@@ -243,40 +243,40 @@
 		</div>
 	</div>
 
-	<div id="fh5co-project">
+	<div id="equinox-project">
 		<div class="container-fluid proj-bottom">
 			<div class="row">
-				<div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
+				<div class="col-md-4 col-sm-6 equinox-project animate-box" data-animate-effect="fadeIn">
 					<a href="#"><img src="images/project-1.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 						<h3>Web Master</h3>
 						<span>View Course</span>
 					</a>
 				</div>
-				<div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
+				<div class="col-md-4 col-sm-6 equinox-project animate-box" data-animate-effect="fadeIn">
 					<a href="#"><img src="images/project-2.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 						<h3>Virtual Assistant</h3>
 						<span>View Course</span>
 					</a>
 				</div>
-				<div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
+				<div class="col-md-4 col-sm-6 equinox-project animate-box" data-animate-effect="fadeIn">
 					<a href="#"><img src="images/project-3.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 						<h3>Read Bible</h3>
 						<span>View Course</span>
 					</a>
 				</div>
-				<div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
+				<div class="col-md-4 col-sm-6 equinox-project animate-box" data-animate-effect="fadeIn">
 					<a href="#"><img src="images/project-9.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 						<h3>Programming</h3>
 						<span>View Course</span>
 					</a>
 				</div>
-				<div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
+				<div class="col-md-4 col-sm-6 equinox-project animate-box" data-animate-effect="fadeIn">
 					<a href="#"><img src="images/project-5.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 						<h3>Technician</h3>
 						<span>View Course</span>
 					</a>
 				</div>
-				<div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
+				<div class="col-md-4 col-sm-6 equinox-project animate-box" data-animate-effect="fadeIn">
 					<a href="#"><img src="images/project-6.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 						<h3>Photography</h3>
 						<span>View Course</span>
@@ -307,11 +307,11 @@
 		</div>
 	</div>
 	
-	<div id="fh5co-started" style="background-image:url(images/img_bg_2.jpg);">
+	<div id="equinox-started" style="background-image:url(images/img_bg_2.jpg);">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+				<div class="col-md-8 col-md-offset-2 text-center equinox-heading">
 					<h2>Lets Get Started</h2>
 					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
 				</div>
@@ -324,16 +324,16 @@
 		</div>
 	</div>
 
-	<footer id="fh5co-footer" role="contentinfo">
+	<footer id="equinox-footer" role="contentinfo">
 		<div class="container">
 			<div class="row row-pb-md">
-				<div class="col-md-3 fh5co-widget">
+				<div class="col-md-3 equinox-widget">
 					<h4>About Learning</h4>
 					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
 				</div>
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
 					<h4>Learning</h4>
-					<ul class="fh5co-footer-links">
+					<ul class="equinox-footer-links">
 						<li><a href="#">Course</a></li>
 						<li><a href="#">Blog</a></li>
 						<li><a href="#">Contact</a></li>
@@ -344,7 +344,7 @@
 
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
 					<h4>Learn &amp; Grow</h4>
-					<ul class="fh5co-footer-links">
+					<ul class="equinox-footer-links">
 						<li><a href="#">Blog</a></li>
 						<li><a href="#">Privacy</a></li>
 						<li><a href="#">Testimonials</a></li>
@@ -355,7 +355,7 @@
 
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
 					<h4>Engage us</h4>
-					<ul class="fh5co-footer-links">
+					<ul class="equinox-footer-links">
 						<li><a href="#">Marketing</a></li>
 						<li><a href="#">Visual Assistant</a></li>
 						<li><a href="#">System Analysis</a></li>
@@ -365,7 +365,7 @@
 
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
 					<h4>Legal</h4>
-					<ul class="fh5co-footer-links">
+					<ul class="equinox-footer-links">
 						<li><a href="#">Find Designers</a></li>
 						<li><a href="#">Find Developers</a></li>
 						<li><a href="#">Teams</a></li>
@@ -382,7 +382,7 @@
 						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
 					</p>
 					<p>
-						<ul class="fh5co-social-icons">
+						<ul class="equinox-social-icons">
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
 							<li><a href="#"><i class="icon-facebook"></i></a></li>
 							<li><a href="#"><i class="icon-linkedin"></i></a></li>
