--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 		
 	Website: 		http://freehtml5.co/
 	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
+	Twitter: 		http://twitter.com/equinox
+	Facebook: 		https://www.facebook.com/equinox
 
 	//////////////////////////////////////////////////////
 	 -->
@@ -64,16 +64,16 @@
 	</head>
 	<body>
 		
-	<div class="fh5co-loader"></div>
+	<div class="equinox-loader"></div>
 	
 	<div id="page">
-	<nav class="fh5co-nav" role="navigation">
+	<nav class="equinox-nav" role="navigation">
 		<div class="top">
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 text-right">
 						<a class="name-style" href="https://wa.me/+919754530845" target="_blank">Whatsapp Now: +91 975 453 0845</a>
-						<ul class="fh5co-social">
+						<ul class="equinox-social">
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
 							<li><a href="#"><i class="icon-instagram"></i></a></li>
 							<li><a href="#"><i class="icon-github"></i></a></li>
@@ -86,7 +86,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-1">
-						<div id="fh5co-logo"><a href="index.html">Equinox<span>.</span></a></div>
+						<div id="equinox-logo"><a href="index.html">Equinox<span>.</span></a></div>
 					</div>
 					<div class="col-xs-11 text-right menu-1">
 						<ul>
@@ -110,7 +110,7 @@
 		</div>
 	</nav>
 
-	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/img_bg_1.jpg);" data-stellar-background-ratio="0.5">
+	<header id="equinox-header" class="equinox-cover" role="banner" style="background-image:url(images/img_bg_1.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -127,36 +127,35 @@
 		</div>
 	</header>
 	<!---
-	<div id="fh5co-counter" class="fh5co-counters">
+	<div id="equinox-counter" class="equinox-counters">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3 text-center animate-box">
-					<span class="fh5co-counter js-counter" data-from="0" data-to="40356" data-speed="5000" data-refresh-interval="50"></span>
-					<span class="fh5co-counter-label">Students</span>
+					<span class="equinox-counter js-counter" data-from="0" data-to="40356" data-speed="5000" data-refresh-interval="50"></span>
+					<span class="equinox-counter-label">Students</span>
 				</div>
 				<div class="col-md-3 text-center animate-box">
-					<span class="fh5co-counter js-counter" data-from="0" data-to="30290" data-speed="5000" data-refresh-interval="50"></span>
-					<span class="fh5co-counter-label">Courses</span>
+					<span class="equinox-counter js-counter" data-from="0" data-to="30290" data-speed="5000" data-refresh-interval="50"></span>
+					<span class="equinox-counter-label">Courses</span>
 				</div>
 				<div class="col-md-3 text-center animate-box">
-					<span class="fh5co-counter js-counter" data-from="0" data-to="2039" data-speed="5000" data-refresh-interval="50"></span>
-					<span class="fh5co-counter-label">Instructor</span>
+					<span class="equinox-counter js-counter" data-from="0" data-to="2039" data-speed="5000" data-refresh-interval="50"></span>
+					<span class="equinox-counter-label">Instructor</span>
 				</div>
 				<div class="col-md-3 text-center animate-box">
-					<span class="fh5co-counter js-counter" data-from="0" data-to="997585" data-speed="5000" data-refresh-interval="50"></span>
-					<span class="fh5co-counter-label">Earnings</span>
+					<span class="equinox-counter js-counter" data-from="0" data-to="997585" data-speed="5000" data-refresh-interval="50"></span>
+					<span class="equinox-counter-label">Earnings</span>
 				</div>
 			</div>
 		</div>
 	</div>
 	-->
 
-	<div id="fh5co-explore" class="fh5co-bg-section">
+	<div id="equinox-explore" class="equinox-bg-section">
 		<div class="container">
 			<div class="row animate-box">
-				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>6 STEPS MENTORING</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+				<div class="col-md-6 col-md-offset-3 text-center equinox-heading">
+					<h2>OUR 6 STEPS MENTORING</h2>
 				</div>
 			</div>
 		</div>	
@@ -319,7 +318,7 @@
 		</div>
 
 
-		<div class="fh5co-explore fh5co-explore1">
+		<div class="equinox-explore equinox-explore1">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 col-md-push-6  animate-box">
@@ -359,7 +358,7 @@
 			</div>
 		</div>
 		<!---
-		<div class="fh5co-explore">
+		<div class="equinox-explore">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-pull-1 animate-box">
@@ -386,48 +385,48 @@
 		</div>-->
 	</div>
 	
-	<div id="fh5co-project">
+	<div id="equinox-project">
 		<div class="container">
 			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Showcase of A Finish Projects</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+				<div class="col-md-8 col-md-offset-2 text-center equinox-heading">
+					<h2>OUR HIGH PROBABLITY TRADES</h2>
+					<p>We believe in excellence and we deliver what we are capable of</p>
 				</div>
 			</div>
 		</div>
 		<div class="container-fluid proj-bottom">
 			<div class="row">
-				<div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
+				<div class="col-md-4 col-sm-6 equinox-project animate-box" data-animate-effect="fadeIn">
 					<a href="#"><img src="images/project-1.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 						<h3>Web Master</h3>
 						<span>View Course</span>
 					</a>
 				</div>
-				<div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
+				<div class="col-md-4 col-sm-6 equinox-project animate-box" data-animate-effect="fadeIn">
 					<a href="#"><img src="images/project-2.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 						<h3>Virtual Assistant</h3>
 						<span>View Course</span>
 					</a>
 				</div>
-				<div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
+				<div class="col-md-4 col-sm-6 equinox-project animate-box" data-animate-effect="fadeIn">
 					<a href="#"><img src="images/project-3.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 						<h3>Read Bible</h3>
 						<span>View Course</span>
 					</a>
 				</div>
-				<div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
+				<div class="col-md-4 col-sm-6 equinox-project animate-box" data-animate-effect="fadeIn">
 					<a href="#"><img src="images/project-9.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 						<h3>Programming</h3>
 						<span>View Course</span>
 					</a>
 				</div>
-				<div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
+				<div class="col-md-4 col-sm-6 equinox-project animate-box" data-animate-effect="fadeIn">
 					<a href="#"><img src="images/project-5.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 						<h3>Technician</h3>
 						<span>View Course</span>
 					</a>
 				</div>
-				<div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
+				<div class="col-md-4 col-sm-6 equinox-project animate-box" data-animate-effect="fadeIn">
 					<a href="#"><img src="images/project-6.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 						<h3>Photography</h3>
 						<span>View Course</span>
@@ -435,44 +434,13 @@
 				</div>
 			</div>
 		</div>
-		<div class="container">
-			<div class="row">
-				<div class="features">
-					<div class="col-md-4 animate-box">
-						<h4>We have coolest features of this course</h4>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.  </p>
-					</div>
-					<div class="col-md-4 animate-box">
-						<h4>Great teachers that we have</h4>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.  </p>
-					</div>
-					<div class="col-md-4 animate-box">
-						<h4>Steps by steps turorial session</h4>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.  </p>
-					</div>
-				</div>
-				<div class="col-md-12 text-center animate-box">
-					<p><a class="btn btn-primary btn-lg btn-learn" href="#">Create A Free Course</a></p>
-				</div>
-			</div>
-		</div>
 	</div>
 
-	<div id="fh5co-steps">
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Start A Course</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-				</div>
-			</div>
-		</div>
-	</div>
 
-	<div id="fh5co-testimonial" class="fh5co-bg-section">
+	<div id="equinox-testimonial" class="equinox-bg-section">
 		<div class="container">
 			<div class="row animate-box">
-				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
+				<div class="col-md-6 col-md-offset-3 text-center equinox-heading">
 					<h2>Testimonials</h2>
 				</div>
 			</div>
@@ -520,61 +488,12 @@
 		</div>
 	</div>
 
-	<div id="fh5co-blog">
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Recent Post</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-4 col-md-4">
-					<div class="fh5co-blog animate-box">
-						<a href="#"><img class="img-responsive" src="images/project-4.jpg" alt=""></a>
-						<div class="blog-text">
-							<h3><a href=""#>45 Minimal Workspace Rooms for Web Savvys</a></h3>
-							<span class="posted_on">Nov. 15th</span>
-							<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<a href="#" class="btn btn-primary">Read More</a>
-						</div> 
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="fh5co-blog animate-box">
-						<a href="#"><img class="img-responsive" src="images/project-2.jpg" alt=""></a>
-						<div class="blog-text">
-							<h3><a href=""#>45 Minimal Worksspace Rooms for Web Savvys</a></h3>
-							<span class="posted_on">Nov. 15th</span>
-							<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<a href="#" class="btn btn-primary">Read More</a>
-						</div> 
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="fh5co-blog animate-box">
-						<a href="#"><img class="img-responsive" src="images/project-3.jpg" alt=""></a>
-						<div class="blog-text">
-							<h3><a href=""#>45 Minimal Workspace Rooms for Web Savvys</a></h3>
-							<span class="posted_on">Nov. 15th</span>
-							<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<a href="#" class="btn btn-primary">Read More</a>
-						</div> 
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 
-
-	<div id="fh5co-started" style="background-image:url(images/img_bg_2.jpg);">
+	<div id="equinox-started" style="background-image:url(images/img_bg_2.jpg);">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+				<div class="col-md-8 col-md-offset-2 text-center equinox-heading">
 					<h2>Lets Get Started</h2>
 					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
 				</div>
@@ -587,16 +506,16 @@
 		</div>
 	</div>
 
-	<footer id="fh5co-footer" role="contentinfo">
+	<footer id="equinox-footer" role="contentinfo">
 		<div class="container">
 			<div class="row row-pb-md">
-				<div class="col-md-3 fh5co-widget">
+				<div class="col-md-3 equinox-widget">
 					<h4>About Learning</h4>
 					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
 				</div>
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
 					<h4>Learning</h4>
-					<ul class="fh5co-footer-links">
+					<ul class="equinox-footer-links">
 						<li><a href="#">Course</a></li>
 						<li><a href="#">Blog</a></li>
 						<li><a href="#">Contact</a></li>
@@ -607,7 +526,7 @@
 
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
 					<h4>Learn &amp; Grow</h4>
-					<ul class="fh5co-footer-links">
+					<ul class="equinox-footer-links">
 						<li><a href="#">Blog</a></li>
 						<li><a href="#">Privacy</a></li>
 						<li><a href="#">Testimonials</a></li>
@@ -618,7 +537,7 @@
 
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
 					<h4>Engage us</h4>
-					<ul class="fh5co-footer-links">
+					<ul class="equinox-footer-links">
 						<li><a href="#">Marketing</a></li>
 						<li><a href="#">Visual Assistant</a></li>
 						<li><a href="#">System Analysis</a></li>
@@ -628,7 +547,7 @@
 
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
 					<h4>Legal</h4>
-					<ul class="fh5co-footer-links">
+					<ul class="equinox-footer-links">
 						<li><a href="#">Find Designers</a></li>
 						<li><a href="#">Find Developers</a></li>
 						<li><a href="#">Teams</a></li>
@@ -645,7 +564,7 @@
 						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
 					</p>
 					<p>
-						<ul class="fh5co-social-icons">
+						<ul class="equinox-social-icons">
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
 							<li><a href="#"><i class="icon-facebook"></i></a></li>
 							<li><a href="#"><i class="icon-linkedin"></i></a></li>
